tests/compile-fail/unaligned_pointers/alignment.stderr
error: Undefined Behavior: accessing memory with alignment 1, but alignment 4 is required
  --> $DIR/alignment.rs:11:9
   |
LL |         *(x_ptr.add(1) as *mut u32) = 42;
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ accessing memory with alignment 1, but alignment 4 is required
   |
   = help: this indicates a bug in the program: it performed an invalid operation, and caused Undefined Behavior
   = help: see https://doc.rust-lang.org/nightly/reference/behavior-considered-undefined.html for further information
           
   = note: inside `main` at $DIR/alignment.rs:11:9

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to previous error

